--- a/assets/styles/style3.css
+++ b/assets/styles/style3.css
@@ -16,7 +16,6 @@ header {
   background-position-y: 25%;
   background-clip: border-box;
   padding: 4rem 1px 4rem 1px;
-  border: 1px solid black;
   z-index: -1;
   flex-wrap: nowrap;
   align-items: center;
@@ -99,7 +98,6 @@ nav ul li a {
   color: black;
   text-align: center;
   padding: 3.2%;
-  border: 1px solid black;
 }
 
 .gallery-list {
@@ -119,6 +117,44 @@ nav ul li a {
   height: auto;
 }
 
+.places {
+  flex: 0 0 300px;
+  padding-left: 5px;
+  border-right: 1px solid #ccc;
+  overflow-y: auto;
+  border: 1px solid black;
+  height: 66vh;
+  box-sizing: border-box;
+}
+
+.places-title {
+  color: black;
+  text-align: center;
+  padding: 3.2%;
+}
+
+.places-columns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.places-list {
+  list-style: none;
+  padding: 12px 0 0 0;
+  flex: 0 0 calc(50% - 5px);
+}
+
+.places-list li {
+  text-align: center;
+  max-width: 100%;
+}
+
+.places-list img {
+  max-width: 100%;
+  height: auto;
+}
+
 .index-main,
 .about-main,
 .contact-main,
@@ -126,7 +162,6 @@ nav ul li a {
 .gameinfo-main {
   flex: 2;
   margin-left: 10px;
-  border: 1px solid black;
   height: 66vh;
 }
 
@@ -138,7 +173,6 @@ nav ul li a {
   color: black;
   text-align: center;
   padding: 0.8%;
-  border-bottom: 1px solid black;
 }
 
 .index-main dl {
